navigation and header almost ready

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <html lang="en">
 <head>
 <!-- Link your CSS stylesheet -->
-<!-- <link rel="stylesheet" type="text/css" href="index.css" /> -->
+<link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
-  <nav>
-    <a>Plan your Visit</a>
-    <a>Learn about the Park</a>
-    <a>Get Involved</a>
-  </nav>
   <header>
+    <nav>
+      <a id="first">Plan your Visit</a>
+      <a id="second">Learn about the Park</a>
+      <a id="third">Get Involved</a>
+    </nav>
+    <section class="main">
     <img src="./assets/header_img.jpg" alt="mountains" />
-    <div>
+    <div class="guide">
       <h1>Yosemite Park Guide</h1>
-      <p>Come explore California’s beautiful wilderness.</p>
+      <p>Come explore California’s beautiful wilderness.</p></br>
       <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
+    </section>
   </header>
   <section>
     <div>
